[project]
name = "zion-python"
version = "0.1.0"
description = "Monorepo of the python packages that I use across the projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.sources]
zion-auth = { workspace = true }
zion-config = { workspace = true }
zion-db = { workspace = true }
zion-logger = { workspace = true }
zion-utils = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.46",
    "ruff>=0.14.14",
    "python-ulid>=3.1.0",
    "ty>=0.0.14",
    "zion-auth",
]
all = [
    { include-group = "dev" },
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.lint.isort]
lines-after-imports = 2
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "zion",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
zion = ["zion_*"]
